--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
-			content="Web site created using create-react-app"
+			content="TrapEmpire.com | Explore trap/dubstep/edm artists on Spotify. Create playlists. Pump the bangers | TrapNation.com | PremiumTrap.com | NativeEarthFestival.com | LightNobility.com"
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
